new paper submission deadline

--- a/conference/index.html
+++ b/conference/index.html
@@ -168,6 +168,9 @@
       
       <div class="text-center"><img src="../images/banner_2023.png" style="width:84%;" alt="Conference artwork" class="img-responsive"/></div>
 <hr>
+<div class="alert alert-primary" role="alert">
+   New Paper submission deadline: Monday, <b>February 20th, 2023 - 23:59 CET</b>.
+ </div>
 <div class="alert alert-success" role="alert">
   Registration is now open: <a href="https://sumo2023.welcome-manager.de">https://sumo2023.welcome-manager.de</a>
   <br>
@@ -205,7 +208,7 @@
 <li>Scientific papers will be reviewed by at least 2 reviewers.</li>
 <li>All accepted scientific papers will be published in the SUMO proceedings.</li>
 <li>Title and a short abstract (300 words) must be submitted until Monday, <del>January 09th, 2023</del> <strong>January 16th, 2023</strong>.</li>
-<li>Paper must be submitted in LaTeX or Word format before midnight, Monday, <strong>February 13th, 2023</strong>.</li>
+<li>Paper must be submitted in LaTeX or Word format before midnight, Monday, <del>February 13th, 2023</del> <strong>February 20th, 2023</strong>.</li>
 <li>Scientific papers should be between 5 and 20 pages long.</li>
 </ul>
 </li>
@@ -242,7 +245,7 @@
 <h1 id="important-dates">Important Dates</h1>
 <ul>
 <li>Title and Abstract submission deadline: <del>Monday, January 09th, 2023</del> <strong>Monday, January 16th, 2023</strong> 23:59 CET.</li>
-<li>Paper submission deadline: <strong>Monday, February 13th, 2023</strong> 23:59 CET.</li>
+<li>Paper submission deadline: <del>Monday, February 13th, 2023</del> <strong>Monday, February 20th, 2023</strong> 23:59 CET.</li>
 <li>Notification of acceptance/rejection: <strong>End of March, 2023</strong>.</li>
 <li>Camera Ready Paper deadline: <strong>Monday, April 10th, 2023</strong> 23:59 CET.</li>
 </ul>
