--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
 <b>SUMO User Conference 2023:</b><br>
   New Title and Abstract submission deadline: Monday, <b>January 16th, 2023 - 23:59 CET</b>. 
 </div> -->
+<div class="alert alert-primary" role="alert">
+ <b>SUMO User Conference 2023:</b><br>
+   New Paper submission deadline: Monday, <b>February 20th, 2023 - 23:59 CET</b>. 
+ </div>
 <div class="alert alert-success" role="alert">
 <b>SUMO User Conference 2023:</b><br>
   Registration is now open: <a href="https://sumo2023.welcome-manager.de">https://sumo2023.welcome-manager.de</a>
