conference title added

--- a/conference/index.html
+++ b/conference/index.html
@@ -252,6 +252,7 @@
 <h1 id="agenda">Agenda</h1>
 <p><em>Available on March 2023</em></p>
 <h1 id="keynote">Keynote</h1>
+<h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
 <br><small style="color: lightgray">© Eidgenössische Technische Hochschule Zürich</small>
 <h6>Prof. Dr. Kay W. Axhausen</h6>
@@ -259,7 +260,8 @@ Institute for Transport Planning and Systems<br>
 Dep. of Civil, Env. and Geomatic Eng.<br>
 ETH Zürich<br>
 <p><a href="https://www.ivt.ethz.ch/en/">Website</a></p>
-<p><em>More info coming soon</em></p>
+<p>The challenge of net-zero shows that the currently preferred options are falling short of the 27 year away targets, as either politically unlikely or not effective enough. The e-bike-city is a project which explores if a city giving e-bikes, bikes and public transport enough room to flourish could be a positive vision mobilizing the necessary, rather fast changes needed.
+The talk will sketch the core dilemma and why a positive vision is needed for change. It will then sketch the e-bike-city and its challenge and show first results. It will introduce the on-going project at the ETH DBAUG department and show the chances for collaboration.</p>
 <h1 id="prices">Prices</h1>
 <ul>
 <li>Regular Ticket: <strong>495 EUR</strong></li>
