conference page updated

--- a/conference/index.html
+++ b/conference/index.html
@@ -168,9 +168,9 @@
       
       <div class="text-center"><img src="../images/banner_2023.png" style="width:84%;" alt="Conference artwork" class="img-responsive"/></div>
 <hr>
-<div class="alert alert-primary" role="alert">
+<!-- <div class="alert alert-primary" role="alert">
    New Paper submission deadline: Monday, <b>February 20th, 2023 - 23:59 CET</b>.
- </div>
+ </div> -->
 <div class="alert alert-success" role="alert">
   Registration is now open: <a href="https://sumo2023.welcome-manager.de">https://sumo2023.welcome-manager.de</a>
   <br>
@@ -182,23 +182,22 @@
  -->
 <h1 id="save-the-date">Save the date!</h1>
 <p>SUMO User Conference 2023: May 02-04 in Berlin.</p>
-<div class="disclaimer"></div>
-<h1 id="call-for-papers">Call for Papers</h1>
-<p>The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):</p>
-<ul>
-<li>Mobility and Demand Modelling</li>
-<li>Traffic Simulation</li>
-<li>Open Tools and Open Data</li>
-<li>Modelling Urban Mobility</li>
-<li>Traffic Applications</li>
-<li>Traffic Management Solutions</li>
-<li>Intermodal Transport</li>
-<li>Autonomous Driving</li>
-<li>Logistics Simulation</li>
-<li>Vehicular Communication</li>
-<li>E-Mobility</li>
-<li>Reinforcement learning / Machine Learning</li>
-</ul>
+<!-- <div class="disclaimer"></div> -->
+<!-- # Call for Papers
+The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):
+
+- Mobility and Demand Modelling
+- Traffic Simulation
+- Open Tools and Open Data
+- Modelling Urban Mobility
+- Traffic Applications
+- Traffic Management Solutions
+- Intermodal Transport
+- Autonomous Driving
+- Logistics Simulation
+- Vehicular Communication
+- E-Mobility
+- Reinforcement learning / Machine Learning -->
 <h1 id="paper-submission">Paper Submission</h1>
 <p>There are two submission types:</p>
 <ol>
@@ -247,10 +246,178 @@
 <li>Title and Abstract submission deadline: <del>Monday, January 09th, 2023</del> <strong>Monday, January 16th, 2023</strong> 23:59 CET.</li>
 <li>Paper submission deadline: <del>Monday, February 13th, 2023</del> <strong>Monday, February 20th, 2023</strong> 23:59 CET.</li>
 <li>Notification of acceptance/rejection: <strong>End of March, 2023</strong>.</li>
-<li>Camera Ready Paper deadline: <strong>Monday, April 10th, 2023</strong> 23:59 CET.</li>
+<li>Camera Ready Paper deadline: <strong>Monday, April 10th, 2023</strong> 23:59 CEST.</li>
 </ul>
 <h1 id="agenda">Agenda</h1>
-<p><em>Available on March 2023</em></p>
+<p><small>🕓 <i>Schedule given in Central European Summer Time (CEST) (UTC+2) - This agenda may be subject to change</i></small></p>
+<table style="border: 2px solid #999;">
+<thead>
+  <tr>
+    <th style="text-align:center" colspan="2">Tuesday, May 02, 2023</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td align="right">12:30 - 13:00</td>
+    <td>
+    Registration<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">13:00 - 13:15</td>
+    <td>
+    Opening<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">13:15 - 14:30</td>
+    <td>
+    <b>SUMO Tutorial</b><br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:30 - 14:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:45 - 16:00</td>
+    <td>
+    <b>Ask us anything</b><br>
+    </td>
+  </tr>
+  <tr style="background-color: #d0f0c0;">
+    <td align="right">18:00</td>
+    <td>
+   <b>Evening Program - Social Event</b><br>
+<p><a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a></p>
+    </td>
+  </tr>
+</tbody>
+</table>
+<br>
+<table style="border: 2px solid #999;">
+<thead>
+  <tr>
+    <th style="text-align:center" colspan="2">Wednesday, May 03, 2023</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td align="right">09:00 - 10:30</td>
+<td>
+Session 1
+    </td>
+  </tr>
+    <tr>
+    <td align="right">10:30 - 10:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">10:45 - 12:15</td>
+<td>
+Session 2
+    </td>
+  </tr>
+  <tr>
+    <td style="text-align:center; background-color: #d9f1ff;" colspan="2"><b><i>Lunch </b></i>&#x1F957;</td>
+  </tr>
+  <tr>
+    <td align="right">13:00 - 14:00</td>
+    <td>
+    <b>Keynote:
+    e-bike-city: An answer to our transport dead-end?</b><br>
+    Prof. Dr. Kay W. Axhausen
+    <p><a style="color:#0645ad; cursor:pointer;" href="#keynote">Read more <i class="fas fa-angle-down"></i></a></p>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:00 - 14:15</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:15 - 15:30</td>
+<td>
+Session 3 - Poster Session
+  </tr>
+    <tr>
+    <td align="right">15:30 - 15:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">15:45 - 17:00</td>
+<td>
+Session 4
+    </td>
+  </tr>
+  <tr style="background-color: #d0f0c0;">
+    <td align="right">18:00</td>
+    <td><b>Evening Program - Barbecue</b> &#127830;
+    </td>
+  </tr>
+</tbody>
+</table>
+<br>
+<table style="border: 2px solid #999;">
+<thead>
+  <tr>
+    <th style="text-align:center" colspan="2">Thursday, May 04, 2023</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td align="right">09:00 - 10:30</td>
+<td>
+Session 5
+    </td>
+  </tr>
+      <tr>
+    <td align="right">10:30 - 10:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">10:45 - 12:15</td>
+<td>
+Session 6
+    </td>
+  </tr>
+  <tr>
+    <td style="text-align:center; background-color: #d9f1ff;" colspan="2"><b><i>Lunch </b></i>&#x1F957;</td>
+  </tr>
+  <tr>
+    <td align="right">13:00 - 14:30</td>
+<td>
+Session 7 - Poster Session
+    </td>
+  </tr>
+      <tr>
+    <td align="right">14:30 - 14:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:45 - 15:15</td>
+<td>
+Session 8
+    </td>
+  </tr>
+  <tr>
+    <td align="right">15:15 - 15:30</td>
+    <td><b><i>Closing</i></b></td>
+  </tr>
+</tbody>
+</table>
+<small>Last update: 21.03.2023 - 15:30 CET</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
@@ -281,15 +448,16 @@ The talk will sketch the core dilemma and why a positive vision is needed for ch
 <h1 id="language">Language</h1>
 <p>The conference language is English.</p>
 <h1 id="venue">Venue</h1>
-<p>German Aerospace Center<br>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d885.3359884779654!2d13.528579894031319!3d52.42803848550116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a8463af33b64ed%3A0x27c68d8076242481!2sDeutsches%20Zentrum%20f%C3%BCr%20Luft-%20und%20Raumfahrt%20(DLR)!5e0!3m2!1sde!2sde!4v1679408714916!5m2!1sde!2sde" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<p>German Aerospace Center (DLR)<br>
 Institute of Transportation Systems<br>
 Rutherfordstr. 2<br>
 12489 Berlin<br>
 Germany</p>
-<div class="disclaimer"></div>
+<!-- <div class="disclaimer"></div> -->
 <h1 id="contact">Contact</h1>
 <p>Please contact the conference team via mail at <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a></p>
-<script>
+<!-- <script>
     var disclaimer_HTML = `
     <div class="alert alert-secondary" role="alert">
     <h6 class="alert-heading">Disclaimer</h6>
@@ -301,7 +469,8 @@ Germany</p>
     for(var i = 0; i < elements.length; i++) {
         elements[i].innerHTML = disclaimer_HTML;
     }
-</script>
+</script> --><blockquote>
+</blockquote>
 </div>
     <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">
 <p class="sidebar-title"><b>Archive</b></p>
@@ -328,7 +497,6 @@ Germany</p>
 <nav id="TableOfContents">
   <ul>
     <li><a href="#save-the-date">Save the date!</a></li>
-    <li><a href="#call-for-papers">Call for Papers</a></li>
     <li><a href="#paper-submission">Paper Submission</a>
       <ul>
         <li><a href="#submission-link">Submission Link</a></li>
