TIB notice added

--- a/conference/index.html
+++ b/conference/index.html
@@ -198,7 +198,15 @@ The conference focuses on presenting new and unique results in the field of mobi
 - Vehicular Communication
 - E-Mobility
 - Reinforcement learning / Machine Learning -->
-<h1 id="paper-submission">Paper Submission</h1>
+<h1 id="for-authors">For Authors</h1>
+<h2 id="important-dates">Important Dates</h2>
+<ul>
+<li>Title and Abstract submission deadline: <del>Monday, January 09th, 2023</del> <strong>Monday, January 16th, 2023</strong> 23:59 CET. ✅</li>
+<li>Paper submission deadline: <del>Monday, February 13th, 2023</del> <strong>Monday, February 20th, 2023</strong> 23:59 CET. ✅</li>
+<li>Notification of acceptance/rejection: <strong>Monday, March 27th, 2023</strong>. ✅</li>
+<li>Camera Ready Paper deadline: <del>Monday, April 10th, 2023</del> <strong>Friday, April 14th, 2023</strong> 23:59 CEST.</li>
+</ul>
+<h2 id="paper-submission">Paper Submission</h2>
 <p>There are two submission types:</p>
 <ol>
 <li>Scientific Papers:
@@ -212,9 +220,6 @@ The conference focuses on presenting new and unique results in the field of mobi
 </ul>
 </li>
 </ol>
-<div class="alert alert-info" role="alert">
-  All Papers must use the <a href="https://easychair.org/publications/for_authors" class="alert-link">EasyChair templates</a>.
-</div>
 <br>
 <ol start="2">
 <li>Technical Presentations / Posters:
@@ -237,17 +242,29 @@ The conference focuses on presenting new and unique results in the field of mobi
 </li>
 </ol>
 <h2 id="submission-link">Submission Link</h2>
-<p>Please submit your papers via EasyChair:
+<!-- Please submit your papers via EasyChair:
+https://easychair.org/conferences/?conf=sumo2023 -->
+<p><strong>PAPERS</strong></p>
+<div class="alert alert-danger" role="alert">
+  <b>Important info regarding the final paper submissions</b>
+  <br>
+  <ul>
+  <li>Please upload your camera-ready paper to TIB (for the final publication), and not to EasyChair.</li>
+  <ul>
+  <li>Upload link: <a href="https://www.tib-op.org/ojs/index.php/scp/submission/wizard">https://www.tib-op.org/ojs/index.php/scp/submission/wizard</a> (you may need to create an account first)</li>
+  </ul>
+  <li>Authors need to use the <a href="https://www.tib-op.org/ojs/index.php/scp/libraryFiles/downloadPublic/8">Word</a> or <a href="https://www.tib-op.org/ojs/index.php/scp/libraryFiles/downloadPublic/9">LaTeX</a> template provided by TIB Open Publishing.</li>
+  <li><b>Upload the camera-ready version in Word or LaTeX (not PDF), before Friday, April 14th, 2023 23:59 CEST.</b></li>
+</ul>
+<hr>
+We understand that these changes may cause some inconveniences, and sincerely apologize for it. This process must be done so for organizational and technical reasons.
+</div>
+<hr>
+<p><strong>TECHNICAL PRESENTATIONS / POSTERS</strong></p>
+<p>The final version of the Poster / Technical Presentation must be submitted before midnight, Monday, April 10th, 2023 via EasyChair:
 <a href="https://easychair.org/conferences/?conf=sumo2023">https://easychair.org/conferences/?conf=sumo2023</a></p>
 <h2 id="ethics-and-malpractice-statement">Ethics and Malpractice Statement</h2>
 <p>You can read our <em><a href="../documents/SUMOPublicationEthics.pdf">Publication Ethics and Publication Malpractice Statement</a></em>, where we list the responsibilities of editors, reviewers, and authors.</p>
-<h1 id="important-dates">Important Dates</h1>
-<ul>
-<li>Title and Abstract submission deadline: <del>Monday, January 09th, 2023</del> <strong>Monday, January 16th, 2023</strong> 23:59 CET.</li>
-<li>Paper submission deadline: <del>Monday, February 13th, 2023</del> <strong>Monday, February 20th, 2023</strong> 23:59 CET.</li>
-<li>Notification of acceptance/rejection: <strong>End of March, 2023</strong>.</li>
-<li>Camera Ready Paper deadline: <strong>Monday, April 10th, 2023</strong> 23:59 CEST.</li>
-</ul>
 <h1 id="agenda">Agenda</h1>
 <p><small>🕓 <i>Schedule given in Central European Summer Time (CEST) (UTC+2) - This agenda may be subject to change</i></small></p>
 <table style="border: 2px solid #999;">
@@ -288,7 +305,7 @@ The conference focuses on presenting new and unique results in the field of mobi
     </td>
   </tr>
   <tr style="background-color: #d0f0c0;">
-    <td align="right">18:00</td>
+    <td align="right">17:00</td>
     <td>
    <b>Evening Program - Social Event</b><br>
 <p><a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a></p>
@@ -417,7 +434,7 @@ Session 8
   </tr>
 </tbody>
 </table>
-<small>Last update: 21.03.2023 - 15:30 CET</small>
+<small>Last update: 27.03.2023 - 13:47 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
@@ -439,6 +456,7 @@ The talk will sketch the core dilemma and why a positive vision is needed for ch
 <p>All prices are Tax-excluded</p>
 <h1 id="registration">Registration</h1>
 <p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and social events in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
+<p><em>If you are going to present at the conference (either a paper or poster), select the &ldquo;Authors and Project Partners&rdquo; Category during registration.</em></p>
 <div class="alert alert-success" role="alert">
   Register here: <a href="https://sumo2023.welcome-manager.de">https://sumo2023.welcome-manager.de</a>
 </div>
@@ -497,13 +515,14 @@ Germany</p>
 <nav id="TableOfContents">
   <ul>
     <li><a href="#save-the-date">Save the date!</a></li>
-    <li><a href="#paper-submission">Paper Submission</a>
+    <li><a href="#for-authors">For Authors</a>
       <ul>
+        <li><a href="#important-dates">Important Dates</a></li>
+        <li><a href="#paper-submission">Paper Submission</a></li>
         <li><a href="#submission-link">Submission Link</a></li>
         <li><a href="#ethics-and-malpractice-statement">Ethics and Malpractice Statement</a></li>
       </ul>
     </li>
-    <li><a href="#important-dates">Important Dates</a></li>
     <li><a href="#agenda">Agenda</a></li>
     <li><a href="#keynote">Keynote</a></li>
     <li><a href="#prices">Prices</a></li>
