--- a/conference/index.html
+++ b/conference/index.html
@@ -180,8 +180,8 @@
   The <a href="#submission-link" class="alert-link">EasyChair submission link</a> is now available.
 </div>
  -->
-<h1 id="save-the-date">Save the date!</h1>
-<p>SUMO User Conference 2023: May 02-04 in Berlin.</p>
+<!-- # Save the date!
+SUMO User Conference 2023: May 02-04 in Berlin. -->
 <!-- <div class="disclaimer"></div> -->
 <!-- # Call for Papers
 The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):
@@ -198,53 +198,44 @@ The conference focuses on presenting new and unique results in the field of mobi
 - Vehicular Communication
 - E-Mobility
 - Reinforcement learning / Machine Learning -->
-<h1 id="for-authors">For Authors</h1>
-<h2 id="important-dates">Important Dates</h2>
-<ul>
-<li>Title and Abstract submission deadline: <del>Monday, January 09th, 2023</del> <strong>Monday, January 16th, 2023</strong> 23:59 CET. ✅</li>
-<li>Paper submission deadline: <del>Monday, February 13th, 2023</del> <strong>Monday, February 20th, 2023</strong> 23:59 CET. ✅</li>
-<li>Notification of acceptance/rejection: <strong>Monday, March 27th, 2023</strong>. ✅</li>
-<li>Camera Ready Paper deadline: <del>Monday, April 10th, 2023</del> <strong>Friday, April 14th, 2023</strong> 23:59 CEST.</li>
-</ul>
-<h2 id="paper-submission">Paper Submission</h2>
-<p>There are two submission types:</p>
-<ol>
-<li>Scientific Papers:
-<ul>
-<li>All accepted scientific papers must be presented at the conference.</li>
-<li>Scientific papers will be reviewed by at least 2 reviewers.</li>
-<li>All accepted scientific papers will be published in the SUMO proceedings.</li>
-<li>Title and a short abstract (300 words) must be submitted until Monday, <del>January 09th, 2023</del> <strong>January 16th, 2023</strong>.</li>
-<li>Paper must be submitted in LaTeX or Word format before midnight, Monday, <del>February 13th, 2023</del> <strong>February 20th, 2023</strong>.</li>
-<li>Scientific papers should be between 5 and 20 pages long.</li>
-</ul>
-</li>
-</ol>
+<!-- # For Authors
+
+## Important Dates
+
+- Title and Abstract submission deadline: ~~Monday, January 09th, 2023~~ **Monday, January 16th, 2023** 23:59 CET. &#9989;
+- Paper submission deadline: ~~Monday, February 13th, 2023~~ **Monday, February 20th, 2023** 23:59 CET. &#9989;
+- Notification of acceptance/rejection: **Monday, March 27th, 2023**. &#9989;
+- Camera Ready Paper deadline: ~~Monday, April 10th, 2023~~ **Friday, April 14th, 2023** 23:59 CEST.
+
+## Paper Submission
+There are two submission types:
+
+1. Scientific Papers:
+   - All accepted scientific papers must be presented at the conference.
+   - Scientific papers will be reviewed by at least 2 reviewers.
+   - All accepted scientific papers will be published in the SUMO proceedings.
+   - Title and a short abstract (300 words) must be submitted until Monday, ~~January 09th, 2023~~ **January 16th, 2023**.
+   - Paper must be submitted in LaTeX or Word format before midnight, Monday, ~~February 13th, 2023~~ **February 20th, 2023**.
+   - Scientific papers should be between 5 and 20 pages long.
+
 <br>
-<ol start="2">
-<li>Technical Presentations / Posters:
-<ul>
-<li>The SUMO conference gives the opportunity to present your topic during the poster session or an oral short presentation.</li>
-<li>There is no need to write a scientific paper.</li>
-<li>Possible technical presentations can be:
-<ul>
-<li>Results of Bachelor or Master theses</li>
-<li>Live Demos</li>
-<li>SUMO Use Cases</li>
-<li>Project Presentations</li>
-<li>Work in Progress which would benefit from the feedback of other SUMO users</li>
-</ul>
-</li>
-<li>Title and a short abstract (300 words) must be submitted until Monday, <del>January 09th, 2023</del> <strong>January 16th, 2023</strong>.</li>
-<li>Final Poster / Technical Presentation must be submitted before midnight, Monday, <strong>April 10th, 2023</strong>.</li>
-<li>Technical Presentations / Posters do not require following a specific template.</li>
-</ul>
-</li>
-</ol>
-<h2 id="submission-link">Submission Link</h2>
-<!-- Please submit your papers via EasyChair:
-https://easychair.org/conferences/?conf=sumo2023 -->
-<p><strong>PAPERS</strong></p>
+
+2. Technical Presentations / Posters:
+    - The SUMO conference gives the opportunity to present your topic during the poster session or an oral short presentation.
+    - There is no need to write a scientific paper.
+    - Possible technical presentations can be:
+        - Results of Bachelor or Master theses
+        - Live Demos
+        - SUMO Use Cases
+        - Project Presentations
+        - Work in Progress which would benefit from the feedback of other SUMO users
+    - Title and a short abstract (300 words) must be submitted until Monday, ~~January 09th, 2023~~ **January 16th, 2023**.
+    - Final Poster / Technical Presentation must be submitted before midnight, Monday, **April 10th, 2023**. 
+    - Technical Presentations / Posters do not require following a specific template.
+
+## Submission Link
+
+**PAPERS**
 <div class="alert alert-danger" role="alert">
   <b>Important info regarding the final paper submissions</b>
   <br>
@@ -259,12 +250,17 @@ https://easychair.org/conferences/?conf=sumo2023 -->
 <hr>
 We understand that these changes may cause some inconveniences, and sincerely apologize for it. This process must be done so for organizational and technical reasons.
 </div>
+
 <hr>
-<p><strong>TECHNICAL PRESENTATIONS / POSTERS</strong></p>
-<p>The final version of the Poster / Technical Presentation must be submitted before midnight, Monday, April 10th, 2023 via EasyChair:
-<a href="https://easychair.org/conferences/?conf=sumo2023">https://easychair.org/conferences/?conf=sumo2023</a></p>
-<h2 id="ethics-and-malpractice-statement">Ethics and Malpractice Statement</h2>
-<p>You can read our <em><a href="../documents/SUMOPublicationEthics.pdf">Publication Ethics and Publication Malpractice Statement</a></em>, where we list the responsibilities of editors, reviewers, and authors.</p>
+
+**TECHNICAL PRESENTATIONS / POSTERS**
+
+The final version of the Poster / Technical Presentation must be submitted before midnight, Monday, April 10th, 2023 via EasyChair:
+ https://easychair.org/conferences/?conf=sumo2023
+
+## Ethics and Malpractice Statement
+
+You can read our *[Publication Ethics and Publication Malpractice Statement](../documents/SUMOPublicationEthics.pdf)*, where we list the responsibilities of editors, reviewers, and authors. -->
 <h1 id="agenda">Agenda</h1>
 <p><small>🕓 <i>Schedule given in Central European Summer Time (CEST) (UTC+2) - This agenda may be subject to change</i></small></p>
 <table style="border: 2px solid #999;">
@@ -308,7 +304,8 @@ We understand that these changes may cause some inconveniences, and sincerely ap
     <td align="right">17:00</td>
     <td>
    <b>Evening Program - Social Event</b><br>
-<p><a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a></p>
+<p>Visit to The Leibniz-Institut für Kristallzüchtung (IKZ)<br>
+<a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a></p>
     </td>
   </tr>
 </tbody>
@@ -434,7 +431,7 @@ Session 8
   </tr>
 </tbody>
 </table>
-<small>Last update: 27.03.2023 - 13:47 CEST</small>
+<small>Last update: 17.04.2023 - 15:22 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
@@ -462,7 +459,9 @@ The talk will sketch the core dilemma and why a positive vision is needed for ch
 </div>
 <p><strong>Keep in mind that the registration will close on April 25th, 2023.</strong></p>
 <h1 id="social-event">Social Event</h1>
-<p><em>More info coming soon</em></p>
+<p>We are going to visit <strong>The Leibniz-Institut für Kristallzüchtung (IKZ)</strong> in Berlin-Adlershof - &ldquo;<em>an international state-of-the-art competence center for science &amp; technology as well as service &amp; transfer for innovations in and by crystalline materials.</em>&rdquo;</p>
+<p>The IKZ is located at just 6 min walking distance from our conference venue.</p>
+<p><a href="https://www.ikz-berlin.de/en/">Visit website</a></p>
 <h1 id="language">Language</h1>
 <p>The conference language is English.</p>
 <h1 id="venue">Venue</h1>
@@ -514,15 +513,6 @@ Germany</p>
 <br><br><div class="d-none d-md-block"><p class="sidebar-title"><b>What's on this Page</b></p>
 <nav id="TableOfContents">
   <ul>
-    <li><a href="#save-the-date">Save the date!</a></li>
-    <li><a href="#for-authors">For Authors</a>
-      <ul>
-        <li><a href="#important-dates">Important Dates</a></li>
-        <li><a href="#paper-submission">Paper Submission</a></li>
-        <li><a href="#submission-link">Submission Link</a></li>
-        <li><a href="#ethics-and-malpractice-statement">Ethics and Malpractice Statement</a></li>
-      </ul>
-    </li>
     <li><a href="#agenda">Agenda</a></li>
     <li><a href="#keynote">Keynote</a></li>
     <li><a href="#prices">Prices</a></li>
