only using the main branch

--- a/about/index.html
+++ b/about/index.html
@@ -303,9 +303,9 @@
 <h1 id="citing-sumo">Citing SUMO</h1>
 <p>When citing SUMO in general, please use our current reference publication: <a href="https://ieeexplore.ieee.org/document/8569938">&ldquo;Microscopic Traffic Simulation using SUMO&rdquo;</a> ; Pablo Alvarez Lopez, Michael Behrisch, Laura Bieker-Walz, Jakob Erdmann, Yun-Pang Flötteröd, Robert Hilbrich, Leonhard Lücken, Johannes Rummel, Peter Wagner, and Evamarie Wießner. IEEE Intelligent Transportation Systems Conference (ITSC), 2018.</p>
 <h6 id="bibtex">BibTeX</h6>
-<pre tabindex="0"><code>@inproceedings{SUMO2018,
+<pre><code>@inproceedings{SUMO2018,
           title = {Microscopic Traffic Simulation using SUMO},
-         author = {Pablo Alvarez Lopez and Michael Behrisch and Laura Bieker-Walz and Jakob Erdmann and Yun-Pang Fl{\&#34;o}tter{\&#34;o}d and Robert Hilbrich and Leonhard L{\&#34;u}cken and Johannes Rummel and Peter Wagner and Evamarie Wie{\ss}ner},
+         author = {Pablo Alvarez Lopez and Michael Behrisch and Laura Bieker-Walz and Jakob Erdmann and Yun-Pang Fl{\&quot;o}tter{\&quot;o}d and Robert Hilbrich and Leonhard L{\&quot;u}cken and Johannes Rummel and Peter Wagner and Evamarie Wie{\ss}ner},
       publisher = {IEEE},
       booktitle = {The 21st IEEE International Conference on Intelligent Transportation Systems},
            year = {2018},
