--- a/conference/index.html
+++ b/conference/index.html
@@ -300,12 +300,21 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
     <b>Ask us anything</b><br>
     </td>
   </tr>
-  <tr style="background-color: #d0f0c0;">
+  <tr>
     <td align="right">17:00</td>
     <td>
    <b>Evening Program - Social Event</b><br>
-<p>Visit to The Leibniz-Institut für Kristallzüchtung (IKZ)<br>
-<a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a></p>
+Visit to The Leibniz-Institut für Kristallzüchtung (IKZ)
+<small>(At just 6 min walking distance from our conference venue)</small><br>
+<a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a>
+    </td>
+  </tr>
+  <tr>
+    <td align="right"></td>
+    <td>
+   <b>Dinner</b> <i>(self-paid)</i><br>
+Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
+<a style="color:#0645ad; cursor:pointer;" target="_blank" href="https://idueamici.berlin/speisekarte/">View menu <i class="fa-xs fa-solid fa-up-right-from-square"></i></a>
     </td>
   </tr>
 </tbody>
@@ -322,10 +331,10 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
     <td align="right">09:00 - 10:30<br><br>Session 1<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Yun-Pang Flötteröd</p></td>
 <td>
     <b>Generating and Calibrating a Microscopic Traffic Flow Simulation Network of Kyoto</b><br>
-<hr>
-    <b>Analysis and modelling of road traffic using SUMO to optimize the arrival time of emergency vehicles</b><br>
+    Andreas Keler, Wenzhe Sun and Jan-Dirk Schmöcker
 <hr>
     <b>Simulation-based origin-destination matrix reduction: a case study of Helsinki city area</b><br>
+    Klavdiya Bochenina, Anton Taleiko and Laura Ruotsalainen
 </td>
   </tr>
     <tr>
@@ -338,10 +347,13 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
     <td align="right">10:45 - 12:15<br><br>Session 2<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Robert Hilbrich</p></td>
 <td>
     <b>Calibration of a Microscopic Traffic Simulation in an Urban Scenario Using Loop Detector Data</b><br>
+    Andreas Keler, Andreas Kunz, Sasan Amini and Klaus Bogenberger
 <hr>
     <b>Comparing Measured Driver Behavior Distributions to Results from Car-Following Models using SUMO and Real-World Vehicle Trajectories from Radar</b><br>
+    Maxwell Schrader, Mahdi Al Abdraboh and Joshua Bittle
 <hr>
     <b>Development, calibration, and validation of a large-scale traffic simulation model: Belgium road network</b><br>
+    Behzad Bamdad Mehrabani, Luca Sgambi, Sven Maerivoet and Maaike Snelder
 </td>
   </tr>
   <tr>
@@ -353,7 +365,8 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
     <b>Keynote:
     e-bike-city: An answer to our transport dead-end?</b><br>
     Prof. Dr. Kay W. Axhausen
-    <p><a style="color:#0645ad; cursor:pointer;" href="#keynote">Read more <i class="fas fa-angle-down"></i></a></p>
+    <br>
+    <a style="color:#0645ad; cursor:pointer;" href="#keynote">Read more <i class="fas fa-angle-down"></i></a>
     </td>
   </tr>
   <tr>
@@ -377,11 +390,13 @@ Session 3 - Poster Session
     <td align="right">15:45 - 17:00<br><br>Session 4<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Ronald Nippold</p></td>
 <td>
     <b>State of Bicycle Modeling in SUMO</b><br>
+    Aboozar Roosta, Heather Kaths, Mirko Barthauer, Jakob Erdmann, Yun-Pang Flötteröd and Michael Behrisch
 <hr>
     <b>Framework for Simulating Cyclists in SUMO</b><br>
+    Heather Kaths and Aboozar Roosta
 </td>
   </tr>
-  <tr style="background-color: #d0f0c0;">
+  <tr>
     <td align="right">18:00</td>
     <td><b>Evening Program - Barbecue</b> &#127830;
     </td>
@@ -400,10 +415,13 @@ Session 3 - Poster Session
     <td align="right">09:00 - 10:30<br><br>Session 5<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Peter Wagner</p></td>
 <td>
     <b>Coping with Randomness in Highly Complex Systems Using the Example of Quantum-Inspired Traffic Flow Optimization</b><br>
+    Maria Haberland and Lars Hohmuth
 <hr>
     <b>The Effects of Route Randomization on Urban Emissions</b><br>
+    Giuliano Cornacchia, Mirco Nanni, Dino Pedreschi and Luca Pappalardo
 <hr>
     <b>Challenges in Reward Design for Reinforcement Learning-based Traffic Signal Control: An Investigation using a CO2 Emission Objective</b><br>
+    Max Schumacher, Christian Medeiros Adriano and Holger Giese
 </td>
   </tr>
       <tr>
@@ -416,10 +434,13 @@ Session 3 - Poster Session
     <td align="right">10:45 - 12:15<br><br>Session 6<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Jakob Erdmann</p></td>
 <td>
     <b>A Technical Concept for sensor-based Traffic Flow Optimization on connected real-world intersections via a SUMO Feature Gap Analysis</b><br>
+    Ingo Trautwein, Andreas Freymann, Emanuel Reichsöllner, Mirko Sonntag, Thomas Schrodi and Jessica Kraus Schoeps
 <hr>
     <b>SUMO Simulations for Federated Learning in Communicating Autonomous Vehicles</b><br>
+    Levente Alekszejenkó and Tadeusz Dobrowiecki
 <hr>
     <b>SUMO Roundabout Simulation with Human in the Loop</b><br>
+    Giorgio Previati and Gianpiero Mastinu
 </td>
   </tr>
   <tr>
@@ -440,9 +461,11 @@ Session 7 - Poster Session
   <tr>
     <td align="right">14:45 - 15:15<br><br>Session 8<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Benjamin Coueraud</p></td>
 <td>
-    <b>Evaluating the benefits of promoting intermodality and active modes in urban transportation: a microsimulation approach</b><br>
+    <b>Analysis and modelling of road traffic using SUMO to optimize the arrival time of emergency vehicles</b><br>
+    Shamli Soni and Karsten Weronek
 <hr>
-    <b>Automated workflows for high-throughput microsimulations of urban traffic with SUMO</b><br>
+    <b>Evaluating the benefits of promoting intermodality and active modes in urban transportation: a microsimulation approach</b><br>
+    Souhir Bennaya and Moez Kilani
 </td>
   </tr>
   <tr>
@@ -451,7 +474,7 @@ Session 7 - Poster Session
   </tr>
 </tbody>
 </table>
-<small>Last update: 18.04.2023 - 17:01 CEST</small>
+<small>Last update: 19.04.2023 - 16:46 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
