--- a/conference/index.html
+++ b/conference/index.html
@@ -378,7 +378,16 @@ Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
   <tr>
     <td align="right">14:15 - 15:30<br><br>Session 3<br><b>Poster Session</b><br><br></td>
 <td>
-Session 3 - Poster Session
+<ul>
+<li>Road Network Throughput Evaluation via Network Calculus - <small>Teodora Mecheva and Nikolay Kakanakov</small></li>
+<li>Evaluating Possibilities for Flexible Train Schedules to not Impede High-priority Sporadic Traffic - <small>Antony Kamp, Max Lietze, Luke Ortlam, Anton Persitzky, Christian Raue, Lucas Reisener, Lukas Pirl and Arne Boockmeyer</small></li>
+<li>Integration of SUMO and SoSID Advanced Air Mobility Simulation using TRaCI - <small>Menno Berger, Nabih Naeem and Prajwal Shiva Prakasha</small></li>
+<li>Integrating SUMO in an urban digital twin - a case study from Munich - <small>Sasan Amini, Christoph Orlich, Christof Beil, Andreas Keler and Klaus Bogenberger</small></li>
+<li>Optimizing Traffic Light Timing in Urban Corridors Using Fuzzy Logic Technology: An Evaluation Using SUMO Simulation - <small>Victor Madrigal</small></li>
+<li>A sandbox virtual environment for simulating highways in a multi-user interactive experience - <small>Cathal Flynn, Ezra Mason, Marco Moroni, Gergely Ferenczi, Andrea Castegnaro, Josh Thompson and Toby Pettinger</small></li>
+<li>The Integration of SUMO within a Data Hub and a Simulation Testbed for the City of Munich – Overview on the project MCube DatSim - <small>Fabian Schuhmann, Fabian Netzler, Johannes Lindner and Andreas Keler</small></li>
+<li>SESAM</li>
+</ul>
   </tr>
     <tr>
     <td align="right">15:30 - 15:45</td>
@@ -449,7 +458,17 @@ Session 3 - Poster Session
   <tr>
     <td align="right">13:00 - 14:30<br><br>Session 7<br><b>Poster Session</b><br><br></td>
 <td>
-Session 7 - Poster Session
+<ul>
+<li>Open-Source Framework for Modeling Emission Concentrations in Urban Areas - <small>Mario Ilic, Seyed M. Saghaeiannejad, Sasan Amini and Klaus Bogenberger</small></li>
+<li>Using SUMO Railway Simulations for Integration Tests of EULYNX Components - <small>Philipp Schmidt, Dirk Friedenberger, Lukas Pirl and Arne Boockmeyer</small></li>
+<li>Exploring ChatGPT as an alternative support tool for SUMO users - <small>Johannes Lindner and Maya Sekeran</small></li>
+<li>Developing an evidenced modelling framework for e-scooters - <small>Hannah Gumble</small></li>
+<li>Connected traffic of vulnerable bicyclists and automated vehicles - Deep learning trajectory generation for realistic simulated bicycle intersection crossings - <small>Christoph M. Schmidt, Jason K. Moore, Azita Dabiri, Riender Happee and Frederik Schulte</small></li>
+<li>Bidirectional Green Waves for Major Road Axes By Adjusting Separate Left-Turn Phases - <small>Christian Liebchen</small></li>
+<li>Demo Presentation: Browser-based Online Parallel SUMO Simulation with Traffik - <small>Mahima Aggarwal, Giovanna Vantini, Xiaosong Ma and Sanjay Chawla</small></li>
+<li>Multicriterial traffic light control focused on optimization goals efficiency, emissions and cyclist safety  –  a SUMO simulation study - <small>Maik Halbach and Robert Markowski</small></li>
+<li>A Co-Simulation Framework for Network Control of Connected Autonomous Vehicles - <small>Raj Tadepalli, Saba Al Rubye and Argyrios Zolotas</small></li>
+</ul>
     </td>
   </tr>
       <tr>
@@ -474,7 +493,7 @@ Session 7 - Poster Session
   </tr>
 </tbody>
 </table>
-<small>Last update: 19.04.2023 - 17:19 CEST</small>
+<small>Last update: 20.04.2023 - 11:13 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
